# hs-web-types

./: CHANGELOG.md  README.md  Setup.hs  jolharg-web-types.cabal
lib/Types/: Email.hs  ErrorMessage.hs  Login.hs  Name.hs  Password.hs  Register.hs  UserType.hs  Username.hs  VerificationToken.hs
test/: MainSpec.hs  Spec.hs
