cabal-version:       2.4
name:                jolharg-web-types
version:             0.1.0.0
license:             AGPL-3.0-only
author:              Dan Dart
maintainer:          git@dandart.co.uk
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:    Types.Email
                    , Types.ErrorMessage
                    , Types.Login
                    , Types.Name
                    , Types.Password
                    , Types.Register
                    , Types.Username
                    , Types.UserType
                    , Types.VerificationToken
 -- other-extensions:
  build-depends:      base >= 4.12 && < 5
                    , aeson
                    , mtl
                    , servant
                    , text
                    , uuid-types
  hs-source-dirs:      lib
  default-language:    Haskell2010
  default-extensions:  DerivingStrategies, OverloadedStrings, UnicodeSyntax
  if impl(ghcjs)
    ghc-options:      -Wall -Werror
                      -Weverything
                      -Wno-unsafe -Wno-safe
                      -Wno-missing-import-lists
                      -Wno-missing-export-lists
                      -Wno-implicit-prelude
                      -Wno-missing-local-signatures
                      -Wno-missing-safe-haskell-mode
  else
    ghc-options:      -Wall -Werror
                      -Weverything
                      -Wno-unsafe -Wno-safe
                      -Wno-missing-import-lists
                      -Wno-missing-export-lists
                      -Wno-implicit-prelude
                      -Wno-missing-local-signatures
                      -Wno-missing-safe-haskell-mode
                      -Wno-missing-kind-signatures
                      -Wno-prepositive-qualified-module
  
test-suite jolharg-web-types-test
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  default-extensions:  DerivingStrategies, OverloadedStrings, UnicodeSyntax
  main-is:             Spec.hs
  if impl(ghcjs)
    ghc-options:      -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
                      -Weverything
                      -Wno-unsafe -Wno-safe
                      -Wno-missing-import-lists
                      -Wno-missing-export-lists
                      -Wno-implicit-prelude
                      -Wno-missing-local-signatures
  else
    ghc-options:      -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
                      -Weverything
                      -Wno-unsafe -Wno-safe
                      -Wno-missing-import-lists
                      -Wno-missing-export-lists
                      -Wno-implicit-prelude
                      -Wno-missing-local-signatures
                      -Wno-missing-safe-haskell-mode
                      -Wno-missing-kind-signatures
                      -Wno-prepositive-qualified-module
  build-depends:
    base >= 4.12 && < 5
    -- , jolharg-web-types
    , hspec
    -- , hspec-core
    -- , hspec-expectations
    -- , HUnit
    -- , QuickCheck
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:
    MainSpec
