cabal-version:      3.0
name:               jolharg-web-types
version:            0.1.0.0
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         git@dandart.co.uk

-- copyright:
-- category:
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:
    Types.Email
    Types.ErrorMessage
    Types.Login
    Types.Name
    Types.Password
    Types.Register
    Types.Username
    Types.UserType
    Types.VerificationToken

  -- other-extensions:
  build-depends:
    , aeson
    , base        >=4.12 && <5
    , mtl
    , servant
    , text
    , uuid-types

  hs-source-dirs:     lib
  default-language:   Haskell2010
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    NoGeneralisedNewtypeDeriving
    OverloadedStrings
    UnicodeSyntax

  if (impl(ghcjs) || impl(ghc <9.2))
    ghc-options:
      -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
      -Wno-missing-import-lists -Wno-missing-export-lists
      -Wno-implicit-prelude -Wno-missing-local-signatures
      -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module
      -Wno-all-missed-specialisations -Wno-missed-specialisations
      -Wno-missing-role-annotations -Wno-missing-kind-signatures
      -Wno-missing-poly-kind-signatures -Wno-unrecognised-warning-flags
      -Wno-missed-specialisations

  else
    ghc-options:
      -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
      -Wno-missing-import-lists -Wno-missing-export-lists
      -Wno-implicit-prelude -Wno-missing-local-signatures
      -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module
      -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
      -Wno-all-missed-specialisations -Wno-missed-specialisations
      -Wno-missing-role-annotations -Wno-missing-kind-signatures
      -Wno-missing-poly-kind-signatures -Wno-unrecognised-warning-flags
      -Wno-missed-specialisations

test-suite jolharg-web-types-test
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  default-extensions:
    DerivingStrategies
    ImportQualifiedPost
    NoGeneralisedNewtypeDeriving
    OverloadedStrings
    UnicodeSyntax

  main-is:            Spec.hs

  if (impl(ghcjs) || impl(ghc <9.2))
    ghc-options:
      -Wall -Werror -threaded -rtsopts -with-rtsopts=-N -Weverything
      -Wno-unsafe -Wno-safe -Wno-missing-import-lists
      -Wno-missing-export-lists -Wno-implicit-prelude
      -Wno-missing-local-signatures -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module -Wno-all-missed-specialisations
      -Wno-missed-specialisations -Wno-missing-role-annotations
      -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
      -Wno-unrecognised-warning-flags -Wno-missed-specialisations

  else
    ghc-options:
      -Wall -Werror -threaded -rtsopts -with-rtsopts=-N -Weverything
      -Wno-unsafe -Wno-safe -Wno-missing-import-lists
      -Wno-missing-export-lists -Wno-implicit-prelude
      -Wno-missing-local-signatures -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module -Wno-missing-kind-signatures
      -Wno-missing-poly-kind-signatures -Wno-all-missed-specialisations
      -Wno-missed-specialisations -Wno-missing-role-annotations
      -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
      -Wno-unrecognised-warning-flags -Wno-missed-specialisations

  build-depends:
    , base   >=4.12 && <5
    , hspec

  -- , jolharg-web-types
  -- , hspec-core
  -- , hspec-expectations
  -- , HUnit
  -- , QuickCheck
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:      MainSpec
