cabal-version:      3.0
name:               jolharg-web-types
version:            0.3.0.0
license:            AGPL-3.0-only
author:             Dan Dart
maintainer:         git@dandart.co.uk

-- copyright:
-- category:
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:
    Types.Email
    Types.ErrorMessage
    Types.Login
    Types.Name
    Types.Password
    Types.Register
    Types.Username
    Types.UserType
    Types.VerificationToken

  -- other-extensions:
  build-depends:
    , aeson       ^>=2.2.3
    , base        >=4.21 && <4.23
    , mtl         ^>=2.3.1
    , servant     ^>=0.20.3
    , text        ^>=2.1.2
    , uuid-types  ^>=1.0.6

  hs-source-dirs:     lib
  default-language:   GHC2024
  default-extensions:
    NoGeneralizedNewtypeDeriving
    OverloadedStrings
    UnicodeSyntax

  ghc-options:
    -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-unrecognised-warning-flags
    -Wno-missed-specialisations

test-suite jolharg-web-types-test
  if (arch(javascript) || arch(wasm32))
    buildable: False

  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  default-language:   GHC2024
  default-extensions:
    NoGeneralisedNewtypeDeriving
    OverloadedStrings
    UnicodeSyntax

  main-is:            Spec.hs

  if !arch(wasm32)
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

  ghc-options:
    -Wall -Werror -Weverything -Wno-unsafe -Wno-safe
    -Wno-missing-import-lists -Wno-missing-export-lists
    -Wno-implicit-prelude -Wno-missing-local-signatures
    -Wno-missing-safe-haskell-mode -Wno-prepositive-qualified-module
    -Wno-missing-kind-signatures -Wno-missing-poly-kind-signatures
    -Wno-all-missed-specialisations -Wno-missed-specialisations
    -Wno-missing-role-annotations -Wno-missing-kind-signatures
    -Wno-missing-poly-kind-signatures -Wno-unrecognised-warning-flags
    -Wno-missed-specialisations

  build-depends:
    , base   >=4.21 && <4.23
    , hspec  ^>=2.11.15

  -- , jolharg-web-types
  -- , hspec-core
  -- , hspec-expectations
  -- , HUnit
  -- , QuickCheck
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:      MainSpec
